cmake_minimum_required(VERSION 3.6)
project(jimp_exercises)

set(CMAKE_CXX_STANDARD 14)

macro(add_subdirectory_if_exists DIR)
    #    message("add_subdirectory_if_exists")
    string(TOUPPER "${DIR}" DIR_UPPER)
    #    message("add_subdirectory_if_exists ${DIR_UPPER}")
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${DIR}/CMakeLists.txt")
        message("add_subdirectory_if_exists ${DIR_UPPER} EXISTS!")
        set("HAVE_DIR_${DIR_UPPER}" 1)
        add_subdirectory("${DIR}")
    endif ()
endmacro(add_subdirectory_if_exists)

add_subdirectory(lab1)
add_subdirectory(lab2)
add_subdirectory(lab3)
add_subdirectory(lab4)
add_subdirectory(lab5)
add_subdirectory(lab6)
add_subdirectory(lab7)
add_subdirectory(lab8)
add_subdirectory(lab9)
add_subdirectory(lab10)
add_subdirectory(tests)

