project(greatestproduct)
set(HEDEAR_FILES GreatestProduct.h)
set(SOURCE_FILES GreatestProduct.cpp)
add_library(libgreatestproduct STATIC ${SOURCE_FILES})
target_include_directories(libgreatestproduct PUBLIC .)
add_executable(greatestproduct ${SOURCE_FILES} main.cpp)
target_link_libraries(greatestproduct libgreatestproduct)